# rust-cli-example

./: Cargo.toml  data.db
src/: main.rs
